--- a/rebar.config
+++ b/rebar.config
@@ -1,4 +1,5 @@
 {erl_opts, [debug_info]}.
 {deps, [
-		{cowboy, ".*", {git, "https://github.com/extend/cowboy.git", "HEAD"}}
+        {jsx, ".*", {git, "https://github.com/talentdeficit/jsx", "HEAD"}},
+        {cowboy, ".*", {git, "https://github.com/extend/cowboy.git", "HEAD"}}
 ]}.
